# HabitTracker_cw

./: .env.example  .env.production.example  .flake8  .gitignore  .isort.cfg  Dockerfile  GITHUB_SECRETS.md  README.md  SERVER_SETUP.md  deploy.sh  docker-compose.yml  manage_bot.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml
apps/: __init__.py
apps/habits/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/habits/migrations/: 0001_initial.py  0002_alter_habit_action_alter_habit_execution_time_and_more.py
apps/telegram_bot/: apps.py  bot.py  handlers.py  tasks.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  settings.py.bak  urls.py
nginx/: nginx.conf
